--- a/pom.xml
+++ b/pom.xml
@@ -2,29 +2,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.auscope.portal</groupId>
-    <artifactId>VGL-Portal</artifactId>
+
+    <groupId>au.csiro</groupId>
+    <artifactId>vgml</artifactId>
     <packaging>war</packaging>
-    <version>1.3.2-SNAPSHOT</version>
-    <name>VGL-Portal</name>
-    <url>https://www.seegrid.csiro.au/wiki/bin/view/ASRDC/VEGLProject</url>
-    <issueManagement>
-        <system>Jira</system>
-        <url>https://jira.csiro.au/browse/VGL</url>
-    </issueManagement>
-    <scm>
-        <connection>scm:svn:https://svn.auscope.org/subversion/AuScopePortal/VEGL-Portal/trunk</connection>
-        <developerConnection>scm:svn:https://svn.auscope.org/subversion/AuScopePortal/VEGL-Portal/trunk</developerConnection>
-        <url>https://svn.auscope.org/subversion/AuScopePortal/VEGL-Portal/trunk</url>
-    </scm>
+    <version>1.0-SNAPSHOT</version>
+    <name>vgml</name>
 
     <!-- Build Configuration -->
-    <organization>
-        <name>AuScope</name>
-        <url>http://www.auscope.org</url>
-    </organization>
     <build>
-        <finalName>VGL-Portal</finalName>
+        <finalName>vgml</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
