--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 # Properties that do not change across machines
 ###########################################################
-jdbc.driverClass=com.mysql.jdbc.Driver
+jdbc.driverClass=org.postgresql.Driver
 
 # Timeouts in seconds
 wait-for-body-content.timeout=90
@@ -86,3 +86,17 @@ geophysics2.jdbc.url=jdbc:mysql://115.146.80.77/veglportal
 geophysics2.erddapservice.url=http://siss2.anu.edu.au/erddap/griddap/
 geophysics2.localStageInDir=/home/vgl-portal/stageIn
 geophysics2.smtp.server=smtp.melbourne.nectar.org.au
+
+# Linux development machine
+torroth-kf.googlemap.key=ABQIAAAAZqsP68C-PfYEAobUmwen1xSei4j9m2Mi-rbOVQ0iCZaYodqdCRQbFXNtqGnMwriezq-u4iBCtlh5WQ
+torroth-kf.jdbc.url=jdbc:postgresql://localhost:5432/vgml
+torroth-kf.erddapservice.url=http://siss2.anu.edu.au/erddap/griddap/
+torroth-kf.smtp.server=smtp-relay.csiro.au
+torroth-kf.localStageInDir=/tmp/vgml
+
+# csiro.amtc.cl
+csiro.googlemap.key=INVALID
+csiro.jdbc.url=jdbc:postgresql://localhost:5432/vgml
+csiro.erddapservice.url=http://doesnotexist.example.org/
+csiro.smtp.server=smtp.doesnotexist.example.org
+csiro.localStageInDir=/var/lib/vgml
