--- a/src/main/resources/env.properties
+++ b/src/main/resources/env.properties
@@ -7,8 +7,8 @@
 #   <param-value>file:///c:/env.properties</param-value>
 # made possible via Spring3 SpEL in the config.
 
-env.jdbc.user=JDBC_USER
-env.jdbc.password=JDBC_PASSWORD
+env.jdbc.user=vgml
+env.jdbc.password=vgml
 env.outputgeonetwork.user=GEONETWORK_USER
 env.outputgeonetwork.password=GEONETWORK_PASSWORD
 env.nci.ec2.accesskey=NCI_EC2_ACCESS_KEY
