--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -95,16 +95,20 @@ geophysics2.erddapservice.url=http://siss2.anu.edu.au/erddap/griddap/
 geophysics2.localStageInDir=/home/vgl-portal/stageIn
 geophysics2.smtp.server=smtp.melbourne.nectar.org.au
 
-# Linux development machine
-torroth-kf.googlemap.key=ABQIAAAAZqsP68C-PfYEAobUmwen1xSei4j9m2Mi-rbOVQ0iCZaYodqdCRQbFXNtqGnMwriezq-u4iBCtlh5WQ
+# Development machine - Debian
 torroth-kf.jdbc.url=jdbc:postgresql://localhost:5432/vgml
-torroth-kf.erddapservice.url=http://siss2.anu.edu.au/erddap/griddap/
-torroth-kf.smtp.server=smtp-relay.csiro.au
 torroth-kf.localStageInDir=/tmp/vgml
+# not used and here only to silence warnings
+torroth-kf.googlemap.key=INVALID
+torroth-kf.google.analytics.key=INVALID
+torroth-kf.erddapservice.url=http://doesnotexist.example.org/
+torroth-kf.smtp.server=smtp.doesnotexist.example.org
 
-# csiro.amtc.cl
-csiro.googlemap.key=INVALID
+# csiro.amtc.cl - CentOS 6
 csiro.jdbc.url=jdbc:postgresql://localhost:5432/vgml
+csiro.localStageInDir=/var/lib/vgml
+# not used and here only to silence warnings
+csiro.googlemap.key=INVALID
+csiro.google.analytics.key=INVALID
 csiro.erddapservice.url=http://doesnotexist.example.org/
 csiro.smtp.server=smtp.doesnotexist.example.org
-csiro.localStageInDir=/var/lib/vgml
